# EDDDe

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  PROJECT_PLAN.md  Pipfile  README.md  analysis_output.txt  analyze_qm40_correlations.py  calc_gw_dist.py  create_qm40_subset.py  example_with_hydra.py  experimental_plan.md  nb_benchmark_playground.ipynb  nb_density_calc_playground.ipynb  nb_gromov_wasserstein_analysis.ipynb  nb_gromov_wasserstein_rot_conf.ipynb  nb_q_benchmark_playground.ipynb  nb_quanti_benchmark_playground.ipynb  predict_wellqrate.sh  pyproject.toml  pytest.ini  run_svm_all_datasets.sh  smiles_to_fingerprints.py
conf/: __init__.py  config.yaml
conf/data/: __init__.py  qsar_defaults.yaml  smrt.yaml  wellqrate.yaml
conf/data/qsar/: aid1798_actives.yaml  aid1798_inactives.yaml  aid1843_actives.yaml  aid1843_inactives.yaml  aid2258_actives.yaml  aid2258_inactives.yaml  aid2689_actives.yaml  aid2689_inactives.yaml  aid435008_actives.yaml  aid435008_inactives.yaml  aid435034_actives.yaml  aid435034_inactives.yaml  aid463087_actives.yaml  aid463087_inactives.yaml  aid485290_actives.yaml  aid485290_inactives.yaml  aid488997_actives.yaml  aid488997_inactives.yaml
data/: README.md
data/SMRT/: SMART_dataset_enn_short.csv
data/qsar/: README.md
data/qualitative_benchmark/: molecules.csv
data/quanti_benchmarks/: smrt_small.sdf
data/welQrate/AID435034/: AID435034_enn.csv
eddde/: __init__.py  __main__.py  cache.py  convert.py  data.py  eddde.py  inference.py  local_settings.example.py  models.py  predict.py  runner.py  svm.py
eddde/data/: __init__.py  base.py  conformers.py  elektronn_runner.py  pipeline.py
eddde/data/sources/: alkanes.py  alkanoic_acids.py  alkanols.py  alkylamines.py  hammett_series.py  molecule_ace.py  muv.py  peg.py  subst_benzenes.py  subst_cyclohexanes.py  welqrate.py
eddde/experiments/: __init__.py  base.py  exp1_homologous.py  exp2_functional_group.py  exp3a_welqrate.py  exp3b_muv.py  exp4_activity_cliffs.py  retrieval_common.py
eddde/methods/: __init__.py  base.py  distance.py
eddde/methods/baselines/: _bitvec_tanimoto.py  atom_pair.py  bcl_mol2d.py  ecfp.py  esim.py  maccs.py  rdkit_descriptors.py  shape_align.py  topological_torsion.py  usr.py  usrcat.py
eddde/methods/muts/: mean.py
scripts/: draw_dataset.py
tests/: conftest.py  test_cli.py  test_data.py  test_inference.py  test_models.py
