[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eddde"
version = "0.1.0"
description = "EDDDe project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "scipy",
    "e3nn",
    "periodictable",
    "torch-geometric",
    "rdkit",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "ovito>=3.14.0",
    "elektronn",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.uv.workspace]
members = ["ElektroNN"]

[tool.uv.sources]
elektronn = { workspace = true }