[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eddde"
version = "0.1.0"
description = "EDDDe project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "rdkit",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "tqdm",
    "elektronn",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "scipy",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["eddde*", "conf*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]
"conf" = ["*.yaml", "**/*.yaml"]

[tool.uv.workspace]

[tool.uv.sources]
elektronn = { git = "ssh://git@github.com/Hackefleisch/ElektroNN" }

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
